--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@
 }
 
 .flyingelevatorimg {
-  padding:10px;
-  margin:auto;  
-  width:50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
 
 
