--- a/style.css
+++ b/style.css
@@ -12,10 +12,8 @@
 }
 
 .flyingelevatorimg {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
+width:700px;
+height:518px;
 }
 
 
